[package]
name = "cosmos_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.22"
dialoguer = "0.10"
indicatif = "0.17"
clearscreen = "1.0"
image = "0.24"
sgp4 = { git = "https://github.com/neuromorphicsystems/sgp4.git", branch = "master" }
dotenvy = "0.15"